
	  Added a Enum parm interface to Indicator:: class to simplify code.

20091022: Added IndicatorSettings:: class. Added indicatorSettings table to db. This stores a description and settings format
          for every indicator. Used by ExScript to simplify code and speed up format parsing. This will also be used to
          allow a gui for indicator building in the future.

20091023: Added IndicatorDialog:: class. This is a dialog for editing the indicator options.

          Changed the format of the way an indicator script is run slightly. The command and script file portions of the
          script command have been split into 2 parameters. The command parm is now just the script interpreter desired
          along with any command line switches eg. 'perl -i blah'  The second parm is the script file path
          eg. '/usr/local/share/qtstalker/indicators/Volume.perl'  NOTE: You will have to start a new ./qtstalker/data.sqlite*
          file due to SQL table changes.

20091025: Added new class IndicatorScript:: This handles the logic of the scripting of indicators. Was split off of ExScript
          for better efficiency. Preparing ExScript to be the scripting engine for future features.

          Made a change to the indicator scripting format. In order for consistancy and future expansion, I added the
          INDICATOR key word in front of all parms in a script. eg. 'SMA,sma,Close,14' has become 'INDICATOR,SMA,sma,Close,14'
          All CUS_examples have been modified. CVS users please update any of your personal indicators to reflect this change.

20091129: Charts added to the recent charts combobox are now placed at the top of the list.

          Fixed CSV bug when importing files with multiple symbols. The filename was being used.

          Docs are mostly updated now. Need some minor changes here and there. No biggie.

          Now able to delete multiple charts from the group tab instead of one at a time.


